# ft_printf

./: .Makefile.swp  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  auteur  ft_printf  main.c  makeold  readfilemain.c  test  test.c  test.sh  test.txt  testfile.txt  testfile2.txt
debug/: colormain.c  readfilemain.c  test.c
includes/: .proto.h.swp  .struct.h.swp  colors.h  includes.h  libft.h  proto.h  struct.h
includes/checks/: check_flags.h  check_precision_max.h  check_spaces.h  check_width.h
includes/color/: color.h  color2.h  color3.h  colors.h
includes/convert/: convert_c.h  convert_d.h  convert_jzlh.h  convert_o.h  convert_p.h  convert_percent.h  convert_r.h  convert_s.h  convert_u.h  convert_x.h
includes/core/: ft_printf.h  parser.h  struct.h  utils.h
includes/print/: print_d.h  print_o.h  print_u.h  print_x.h  print_xx.h
includes/unit-testing/: libft.h
libft/: Makefile  ft_atoi.c  ft_binlen.c  ft_bzero.c  ft_cat.c  ft_charwlen.c  ft_itoa.c  ft_itoa_base_uint.c  ft_memalloc.c  ft_nblen_l.c  ft_putnbr.c  ft_putnbr_l.c  ft_putnbr_ll.c  ft_putnstr.c  ft_putnwchar.c  ft_putnwstr.c  ft_putstr.c  ft_putwchar.c  ft_strchr.c  ft_tolower.c  libft.h
libft/includes/: libft.h
srcs/: .ft_printf.c.swp  .main.c.swp  .main_parse.c.swp  .parser_main.c.swp  .utils.c.swp  check_flags.c  check_precision_max.c  check_spaces.c  check_width.c  color.c  color2.c  color3.c  convert_c.c  convert_d.c  convert_jzlh.c  convert_o.c  convert_p.c  convert_percent.c  convert_r.c  convert_s.c  convert_u.c  convert_x.c  debug_funcs.c  ft_printf.c  main.c  main_parse.c  parser.c  parser_main.c  print_d.c  print_o.c  print_u.c  print_x.c  print_xx.c  utils.c
srcs/checks/: check_flags.c  check_precision_max.c  check_spaces.c  check_width.c
srcs/color/: color.c  color2.c  color3.c
srcs/convert/: convert_c.c  convert_d.c  convert_jzlh.c  convert_o.c  convert_p.c  convert_percent.c  (+4 more)
tests/: ft_printf.txt  printf.txt  run.sh
(+11 files in other folders)
